# BTC-Return-Stablecoin-Volume-Analysis

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
dbt/btc_analysis/: .gitignore  dbt_project.yml
dbt/btc_analysis/models/marts/: fct_btc_usdt_correlation.sql  shcema.yml
dbt/btc_analysis/models/staging/: sources.yml  stg_crypto_market.sql
kestra/: crypto_market_data_pipeline.yaml  dbt_flow.yaml  upload_history.yaml
scripts/: extract_data.py  extract_data_daily.py  extract_data_history.py
terraform/: main.tf  variable.tf
