[project]
name = "btc-return-stablecoin-volume-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dbt-bigquery>=1.11.1",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "requests>=2.33.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
